update homepage and about

--- a/about/index.html
+++ b/about/index.html
@@ -59,7 +59,7 @@
           Technically, I love iOS development and everything around it. You can find me watching WWDC videos in my free time or creating prototypes. Every day, I'm learning how to better build elegant, scalable and technologically-focused solutions.
         </p>
 
-  		  <p><a href="mailto:dan@barefootcoders.com">Email me</a> and say hi if you're feeling friendly.</p>
+  		  <p>Feel free to <a href="mailto:dan@barefootcoders.com">send me an email</a>.</p>
 
         <div class="footer">
           <a class="email" href="mailto:dan@barefootcoders.com?subject=%5BWEB%5D%20Contact"></a>
