--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2>I'm a Mobile Developer</h2>
 
           <p>
-            Hi! I'm a mobile developer based in Palo Alto, California but I'm traveling through Asia right now. I co-host the <a href="http://www.meetup.com/Palo-Alto-iOS-Study-Group/" target="_blank">Palo Alto iOS Weekly Study Group</a> and I love attending hackathons. I spend my free time hiking, biking, and building apps that solve issues spanning various fields such as education and geopolitics. If you're curious, <a href="/about">here's more about me</a> and <a href="DanStepanov.pdf" target="_blank">here's my resume</a>.
+            Hi! I'm a mobile developer based in Palo Alto, California but I'm traveling through the US right now. I co-host the <a href="http://www.meetup.com/Palo-Alto-iOS-Study-Group/" target="_blank">Palo Alto iOS Weekly Study Group</a> and I love attending hackathons. I spend my free time hiking, biking, and building apps that solve issues spanning various fields such as education and geopolitics. If you're curious, <a href="/about">here's more about me</a> and <a href="DanStepanov.pdf" target="_blank">here's my resume</a>.
           </p>
 
         <h2>Work</h2>
@@ -45,28 +45,28 @@
           </p>
 
           <p>
-            I'm currently traveling around Asia with a group called <a href="http://www.hackerparadise.org/" rel="external nofollow" target="_blank">Hacker Paradise</a>. I'm writing this from a coffee shop in Kyoto, Japan and I will be making my way down to Chiang Mai, Thailand in the next couple of days.
+            I'm currently in New York City while working on developing (and raising a round for) <a href="http://slice.capital" target="_blank">Slice Capital</a>. I'll be heading back to California shortly to both continue work with the Slice team and to soak up some Sun. I'm looking forward to traveling a bit more this year with trips to South America and Australia.
           </p>
 
           <h3>Latest Apps</h3>
 
           <ul class="apps">
             <li>
-              <a href="https://tryminerva.com/" rel="external nofollow" title="Minerva" target="_blank">
-                <img src="./img/app/minerva.png" alt="Minerva">
-                <span>Minerva</span>
+              <a href="http://slice.capital/" rel="external nofollow" title="Slice Capital" target="_blank">
+                <img src="./img/app/slice.png" alt="Slice Capital">
+                <span>Slice Capital</span>
               </a>
             </li>
             <li>
-              <a href="https://itunes.apple.com/us/app/vinous-wine-reviews-ratings/id1010711422?mt=8" rel="external nofollow" title="Vinous" target="_blank">
-                <img src="./img/app/vinous.png" alt="Vinous">
-                <span>Vinous</span>
+              <a href="https://itunes.apple.com/us/app/boycotttrump/id1171663655?mt=8" rel="external nofollow" title="Boycott Trump" target="_blank">
+                <img src="./img/app/trump.png" alt="Boycott Trump">
+                <span>Boycott Trump</span>
               </a>
             </li>
             <li>
-              <a href="https://itunes.apple.com/us/app/geoconnect-pro/id1105973922?mt=8" rel="external nofollow" title="FLSGeoConnect-iOS" target="_blank">
-                <img src="./img/app/fls.png" alt="FLSGeoConnect">
-                <span>FLSGeoConnect</span>
+              <a href="https://commaful.com/" rel="external nofollow" title="Commaful" target="_blank">
+                <img src="./img/app/commaful.png" alt="Commaful">
+                <span>Commaful</span>
               </a>
             </li>
             <li>
