update apps on work page

--- a/work/index.html
+++ b/work/index.html
@@ -46,6 +46,24 @@
 
         <ul class="apps">
           <li>
+            <a href="http://slice.capital/" rel="external nofollow" title="Slice Capital" target="_blank">
+              <img src="../img/app/slice.png" alt="Slice Capital">
+              <span>Slice Capital</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://itunes.apple.com/us/app/boycotttrump/id1171663655?mt=8" rel="external nofollow" title="Boycott Trump" target="_blank">
+              <img src="../img/app/trump.png" alt="Boycott Trump">
+              <span>Boycott Trump</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://commaful.com/" rel="external nofollow" title="Commaful" target="_blank">
+              <img src="../img/app/commaful.png" alt="Commaful">
+              <span>Commaful</span>
+            </a>
+          </li>
+          <li>
             <a href="https://itunes.apple.com/us/app/vinous-wine-reviews-ratings/id1010711422?mt=8" rel="external nofollow" title="Vinous-iOS" target="_blank">
               <img src="../img/app/vinous.png" alt="Vinous">
               <span>Vinous</span>
@@ -89,6 +107,24 @@
 
         <h3>Android Apps</h3>
         <ul class="apps">
+          <li>
+            <a href="http://slice.capital/" rel="external nofollow" title="Slice Capital" target="_blank">
+              <img src="../img/app/slice.png" alt="Slice Capital">
+              <span>Slice Capital</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://play.google.com/store/apps/details?id=com.boycotttrump&hl=en" rel="external nofollow" title="Boycott Trump" target="_blank">
+              <img src="../img/app/trump.png" alt="Boycott Trump">
+              <span>Boycott Trump</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://commaful.com/" rel="external nofollow" title="Commaful" target="_blank">
+              <img src="../img/app/commaful.png" alt="Commaful">
+              <span>Commaful</span>
+            </a>
+          </li>
           <li>
             <a href="https://play.google.com/store/apps/details?id=com.geoconnectpro&hl=en" rel="external nofollow" title="FLSGeoConnect-Android" target="_blank">
               <img src="../img/app/fls.png" alt="FLSGeoConnect">
