update Firecat link

--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
               </a>
             </li>
             <li>
-              <a href="https://itunes.apple.com/us/app/boycotttrump/id1171663655?mt=8" rel="external nofollow" title="Boycott Trump" target="_blank">
-                <img src="./img/app/trump.png" alt="Boycott Trump">
-                <span>Boycott Trump</span>
+              <a href="https://itunes.apple.com/us/app/id1125684467" rel="external nofollow" title="Firecat" target="_blank">
+                <img src="./img/app/firecat.png" alt="Firecat">
+                <span>Firecat</span>
               </a>
             </li>
             <li>
-              <a href="https://commaful.com/" rel="external nofollow" title="Commaful" target="_blank">
-                <img src="./img/app/commaful.png" alt="Commaful">
-                <span>Commaful</span>
+              <a href="https://itunes.apple.com/us/app/boycotttrump/id1171663655?mt=8" rel="external nofollow" title="Boycott Trump" target="_blank">
+                <img src="./img/app/trump.png" alt="Boycott Trump">
+                <span>Boycott Trump</span>
               </a>
             </li>
             <li>
