--- a/work/index.html
+++ b/work/index.html
@@ -77,7 +77,7 @@
           </li>
 
           <li>
-            <a href="http://www.getfirecat.com/" rel="external nofollow" title="Firecat" target="_blank">
+            <a href="https://itunes.apple.com/us/app/id1125684467" rel="external nofollow" title="Firecat" target="_blank">
               <img src="../img/app/firecat.png" alt="Firecat">
               <span>Firecat</span>
             </a>
@@ -165,10 +165,10 @@
           Minerva is a slack app that helps mentors connect with hackers at hackathons. It was, most recently, used at University of Michigan's hackathon, <a href="http://mhacks.com/" target="_blank">MHacks 8</a>.
         </p>
 
-        <h3><a href="https://getfirecat.com/" target="_blank">Firecat</a></h3>
+        <h3><a href="https://itunes.apple.com/us/app/id1125684467" target="_blank">Firecat</a></h3>
 
         <p>
-          One day I got tired of taking and giving business cards so I made an app that allows me to simply select what contact card I want to share with someone and then it let's me send that card to someone via sms or email. Firecat is currently in a private beta but you can request to join via Testflight by clicking the above link.
+          One day I got tired of taking and giving business cards so I made an app that allows me to simply select what contact card I want to share with someone and then it let's me send that card to someone via sms or email. The beauty of the app is that no one else needs to have the app for it to work.
         </p>
 
         <h3><a href="https://itunes.apple.com/us/app/anycdote/id971437731?ls=1&mt=8" target="_blank">Anycdote</a></h3>
