--- a/about/index.html
+++ b/about/index.html
@@ -32,7 +32,7 @@
     		<h2>About Me</h2>
 
   		  <p>
-          I am a <a href="https://github.com/danstepanov" rel="external nofollow" target="_blank">Swift and React-Native engineer</a>, <a href="http://devpost.com/danstepanov?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav" target="_blank">hackathon junky</a>, wanna-be designer, classic car enthusiast, and hummus lover. I live in Palo Alto but I tend to travel a lot.
+          I am a <a href="https://github.com/danstepanov" rel="external nofollow" target="_blank">Swift and React-Native developer</a>, <a href="http://devpost.com/danstepanov?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav" target="_blank">hackathon junky</a>, classic car enthusiast, and hummus lover. I live in Palo Alto but I tend to travel a lot.
         </p>
 
         <p>
@@ -59,10 +59,10 @@
           Technically, I love iOS development and everything around it. You can find me watching WWDC videos in my free time or creating prototypes. Every day, I'm learning how to better build elegant, scalable and technologically-focused solutions.
         </p>
 
-  		  <p>Feel free to <a href="mailto:dan@barefootcoders.com">send me an email</a>.</p>
+  		  <p>Feel free to <a href="mailto:dan@slice.capital">send me an email</a>.</p>
 
         <div class="footer">
-          <a class="email" href="mailto:dan@barefootcoders.com?subject=%5BWEB%5D%20Contact"></a>
+          <a class="email" href="mailto:dan@slice.capital?subject=%5BWEB%5D%20Contact"></a>
           <a class="github" href="http://github.com/danstepanov" target="_blank"></a>
           <a class="twitter" href="http://twitter.com/danstepanov" target="_blank"></a>
         </div>
