--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
         <h2>I'm a Mobile Developer</h2>
 
           <p>
-            Hi! I'm a mobile developer based in Palo Alto, California but I'm traveling through the US right now. I co-host the <a href="http://www.meetup.com/Palo-Alto-iOS-Study-Group/" target="_blank">Palo Alto iOS Weekly Study Group</a> and I love attending hackathons. I spend my free time hiking, biking, and building apps that solve issues spanning various fields such as education and geopolitics. If you're curious, <a href="/about">here's more about me</a> and <a href="DanStepanov.pdf" target="_blank">here's my resume</a>.
+            Hi! I'm a mobile developer based in Palo Alto, California but I'm traveling through the US right now. I co-host the <a href="http://www.meetup.com/Palo-Alto-iOS-Study-Group/" target="_blank">Palo Alto iOS Weekly Study Group</a> and I love attending hackathons. I spend my free time hiking, biking, and building apps that solve issues spanning various fields such as education and geopolitics. If you're curious, <a href="/about">here's more about me</a>.
           </p>
 
         <h2>Work</h2>
 
           <p>
-            I work at <a href="https://www.barefootcoders.com" target="_blank">Barefoot Coders</a> as a software engineer developing numerous native apps. Additionally, I'm a mentor at <a href="http://hacker.fund/" target="_blank">Hacker Fund</a> where I help teach high school students to code. You can check out more details on my <a href="/work">Work</a> page.
+            I work at <a href="https://slice.capital" target="_blank">Slice Capital</a> as the Dark Lord of the Sith. Additionally, I'm a mentor at <a href="http://hacker.fund/" target="_blank">Hacker Fund</a> where I help high school students learn to code. You can check out more details on my <a href="/work">Work</a> page.
           </p>
 
           <p>
-            I'm currently in New York City while working on developing (and raising a round for) <a href="http://slice.capital" target="_blank">Slice Capital</a>. I'll be heading back to California shortly to both continue work with the Slice team and to soak up some Sun. I'm looking forward to traveling a bit more this year with trips to South America and Australia.
+            I'm currently in New York City while working on developing <a href="http://slice.capital" target="_blank">Slice Capital</a>. I'll be heading back to California shortly to both continue work with the Slice team and to soak up some Sun. I'm looking forward to traveling a bit more this year with trips to South America and Australia.
           </p>
 
           <h3>Latest Apps</h3>
