--- a/location/index.html
+++ b/location/index.html
@@ -10,6 +10,6 @@
     <link id="favicon" rel="icon" type="image/png" sizes="57x52" href="/favicon.png">
   </head>
   <body>
-    <p>New York, New York, USA</p>
+    <p>Philz Coffee, Palo Alto, CA, USA</p>
   </body>
 </html>
