--- a/work/index.html
+++ b/work/index.html
@@ -52,6 +52,12 @@
             </a>
           </li>
           <li>
+            <a href="https://itunes.apple.com/us/app/chem101-chemistry-classroom/id1128486439?mt=8" rel="external nofollow" title="101" target="_blank">
+              <img src="../img/app/101.png" alt="101">
+              <span>101</span>
+            </a>
+          </li>
+          <li>
             <a href="https://itunes.apple.com/us/app/boycotttrump/id1171663655?mt=8" rel="external nofollow" title="Boycott Trump" target="_blank">
               <img src="../img/app/trump.png" alt="Boycott Trump">
               <span>Boycott Trump</span>
@@ -111,6 +117,12 @@
             <a href="http://slice.capital/" rel="external nofollow" title="Slice Capital" target="_blank">
               <img src="../img/app/slice.png" alt="Slice Capital">
               <span>Slice Capital</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://play.google.com/store/apps/details?id=bonds.one_o_one.bonds_android" rel="external nofollow" title="101" target="_blank">
+              <img src="./img/app/101.png" alt="101">
+              <span>101</span>
             </a>
           </li>
           <li>
