--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
               </a>
             </li>
             <li>
-              <a href="https://itunes.apple.com/us/app/id1125684467" rel="external nofollow" title="Firecat" target="_blank">
-                <img src="./img/app/firecat.png" alt="Firecat">
-                <span>Firecat</span>
+              <a href="https://itunes.apple.com/us/app/chem101-chemistry-classroom/id1128486439?mt=8" rel="external nofollow" title="101" target="_blank">
+                <img src="./img/app/101.png" alt="101">
+                <span>101</span>
               </a>
             </li>
             <li>
-              <a href="https://itunes.apple.com/us/app/boycotttrump/id1171663655?mt=8" rel="external nofollow" title="Boycott Trump" target="_blank">
-                <img src="./img/app/trump.png" alt="Boycott Trump">
-                <span>Boycott Trump</span>
+              <a href="https://itunes.apple.com/us/app/id1125684467" rel="external nofollow" title="Firecat" target="_blank">
+                <img src="./img/app/firecat.png" alt="Firecat">
+                <span>Firecat</span>
               </a>
             </li>
             <li>
@@ -79,7 +79,7 @@
         </div>
 
         <div class="footer">
-          <a class="email" href="mailto:dan@barefootcoders.com?subject=%5BWEB%5D%20Contact"></a>
+          <a class="email" href="mailto:me@danstepanov.com?subject=%5BWEB%5D%20Contact"></a>
           <a class="github" href="http://github.com/danstepanov" target="_blank"></a>
           <a class="twitter" href="http://twitter.com/danstepanov" target="_blank"></a>
         </div>
