fix android image link for 101

--- a/work/index.html
+++ b/work/index.html
@@ -121,7 +121,7 @@
           </li>
           <li>
             <a href="https://play.google.com/store/apps/details?id=bonds.one_o_one.bonds_android" rel="external nofollow" title="101" target="_blank">
-              <img src="./img/app/101.png" alt="101">
+              <img src="../img/app/101.png" alt="101">
               <span>101</span>
             </a>
           </li>
