--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2>I'm a Mobile Developer</h2>
 
           <p>
-            Hi! I'm a mobile developer based in Palo Alto, California but I'm traveling through the US right now. I co-host the <a href="http://www.meetup.com/Palo-Alto-iOS-Study-Group/" target="_blank">Palo Alto iOS Weekly Study Group</a> and I love attending hackathons. I spend my free time hiking, biking, and building apps that solve issues spanning various fields such as education and geopolitics. If you're curious, <a href="/about">here's more about me</a>.
+            Hi! I'm a mobile developer living in Palo Alto, California. I co-host the <a href="http://www.meetup.com/Palo-Alto-iOS-Study-Group/" target="_blank">Palo Alto iOS Weekly Study Group</a> and I love attending hackathons. I spend my free time hiking, biking, and building apps that solve issues spanning various fields such as education and geopolitics. If you're curious, <a href="/about">here's more about me</a>.
           </p>
 
         <h2>Work</h2>
@@ -45,7 +45,7 @@
           </p>
 
           <p>
-            I'm currently in New York City while working on developing <a href="http://slice.capital" target="_blank">Slice Capital</a>. I'll be heading back to California shortly to both continue work with the Slice team and to soak up some Sun. I'm looking forward to traveling a bit more this year with trips to South America and Australia.
+            I'm currently in the Bay Area while working on developing <a href="http://slice.capital" target="_blank">Slice Capital</a>. I'm looking forward to traveling a bit more over the next year with trips to South America and Australia.
           </p>
 
           <h3>Latest Apps</h3>
