--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
 
         <div class="footer">
-          <a class="email" href="mailto:me@danstepanov.com?subject=%5BWEB%5D%20Contact"></a>
+          <a class="email" href="mailto:danhstepanov@gmail.com?subject=%5BWEB%5D%20Contact"></a>
           <a class="github" href="http://github.com/danstepanov" target="_blank"></a>
           <a class="twitter" href="http://twitter.com/danstepanov" target="_blank"></a>
         </div>
