--- a/about/index.html
+++ b/about/index.html
@@ -10,30 +10,6 @@
     <link id="favicon" rel="icon" type="image/png" sizes="57x52" href="/favicon.png">
   </head>
   <body>
-    <!-- Start of Async Drift Code -->
-    <script>
-    !function() {
-      var t;
-      if (t = window.driftt = window.drift = window.driftt || [], !t.init) return t.invoked ? void (window.console && console.error && console.error("Drift snippet included twice.")) : (t.invoked = !0,
-      t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ],
-      t.factory = function(e) {
-        return function() {
-          var n;
-          return n = Array.prototype.slice.call(arguments), n.unshift(e), t.push(n), t;
-        };
-      }, t.methods.forEach(function(e) {
-        t[e] = t.factory(e);
-      }), t.load = function(t) {
-        var e, n, o, i;
-        e = 3e5, i = Math.ceil(new Date() / e) * e, o = document.createElement("script"),
-        o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + i + "/" + t + ".js",
-        n = document.getElementsByTagName("script")[0], n.parentNode.insertBefore(o, n);
-      });
-    }();
-    drift.SNIPPET_VERSION = '0.3.1';
-    drift.load('39u97m8786gs');
-    </script>
-    <!-- End of Async Drift Code -->
     <script type="text/javascript">
       mixpanel.track(
         "Open Page",
@@ -56,19 +32,15 @@
     		<h2>About Me</h2>
 
   		  <p>
-          I am a <a href="https://github.com/danstepanov" rel="external nofollow" target="_blank">Swift and React-Native developer</a>, <a href="http://devpost.com/danstepanov?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav" target="_blank">hackathon junky</a>, classic car enthusiast, and hummus lover. I live in Palo Alto but I tend to travel a lot.
+          I am a <a href="https://github.com/danstepanov" rel="external nofollow" target="_blank">full stack Javascript developer</a>, <a href="http://devpost.com/danstepanov?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav" target="_blank">hackathon junky</a>, classic car enthusiast, and hummus lover. I currenlty live in LA but I tend to travel a lot.
         </p>
 
         <p>
-          I graduated with a degree in Chemical Engineering from Penn State in May of 2015. While in college, I ran my own company and headed the <a href="http://www.innoblue.org/" target="_blank">Innoblue</a> Venture Accelerator where I helped five student teams transform their ideas into effective businesses.
+          I graduated with a degree in Chemical Engineering from Penn State in May of 2015 but I don't really use that knowledge much outside of HQ Trivia.
         </p>
 
         <p>
-          I've spent a lot of time, outside of college, studying and exploring various technologies inlcuding human-computer interface, artificial intelligence, machine learning, cross-platform mobile design, and augmented reality via 3D mobile scanning.
-        </p>
-
-        <p>
-          Outside of technology, I've been reading a lot about the Chinese style of Buddhism known as Zen. One particular concept that really stands out to me is Shoshin, or "Beginner's Mind." Beginners learn the most effectively as their minds are, inherently, ready to learn. By suppressing arrogance/pride and approaching each learning opportunity with the mentality of a beginner, I can ensure that I absorb the maximum amount of information available. I highly recommend the book <a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=zen+mind+beginner%27s+mind+book" target="_blank">Zen Mind, Beginner's Mind</a> by Shunryū Suzuki. I also enjoy hiking, biking, and almost anything involving water.
+          I'm currently reading Zero to One by Peter Thiel and I'm always looking for book recommendations. I enjoy playing chess and other mind games such as Avalon.
         </p>
 
   		  <p>Ask me things on Twitter if you're curious.</p>
@@ -76,11 +48,11 @@
   		  <h2>Interests</h2>
 
         <p>
-          I love collaborative building, good food (especially hummus), socializing, hiking, biking, listening to music and traveling as much as I can.
+          I love collaborative building, good food (especially hummus), debating, and learning.
         </p>
 
         <p>
-          Technically, I love iOS development and everything around it. You can find me watching WWDC videos in my free time or creating prototypes. Every day, I'm learning how to better build elegant, scalable and technologically-focused solutions.
+          In my free time, you can find me either reading Hacker News or building something that changes how people do things.
         </p>
 
   		  <p>Feel free to <a href="mailto:dan@slice.capital">send me an email</a>.</p>
