--- a/work/index.html
+++ b/work/index.html
@@ -198,7 +198,7 @@
         </h3>
 
         <p>
-          Reach is a secure &amp; discrete communication platform I made for reporters who work in dangerous areas. I built Reach because I believe that every person is entitled to freedom of speech. Reach is both a web app and a native Android app built using <a href="https://facebook.github.io/react/" target="_blank">React</a> and <a href="https://facebook.github.io/react-native/" target="_blank">React-Native</a>. It is currently under development but, even so, it employs a multitude of features to protect users such as encryption of data using SSH, device-based account association rather than user-based association, and active camouflage via a series of distinct app disguises. Testing is currenly being conducted between Harvard and users in Syria.
+          Reach is a secure &amp; discrete communication platform I made for reporters who work in dangerous areas. I built Reach because I believe that every person is entitled to freedom of speech. Reach is both a web app and a native Android app built using <a href="https://facebook.github.io/react/" target="_blank">React</a> and <a href="https://facebook.github.io/react-native/" target="_blank">React-Native</a>. It is currently under development but, even so, it employs a multitude of features to protect users such as encryption of data using SSH, device-based account association rather than user-based association, and active camouflage via a series of distinct app disguises. Testing is currently being conducted between Harvard and users in Syria.
         </p>
       </div>
 
