--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h2>What am I up to?</h2>
 
           <p>
-            I'm currenlty building <a href="https://slice.capital" target="_blank">Slice Capital</a>. I also work on <a href="http://hacker.fund/" target="_blank">Hacker Fund</a> where I help high school students learn to code. For more things that I've built, check out my <a href="/work">Work</a> page.
+            I'm currently building <a href="https://slice.capital" target="_blank">Slice Capital</a>. I also work on <a href="http://hacker.fund/" target="_blank">Hacker Fund</a> where I help high school students learn to code. For more things that I've built, check out my <a href="/work">Work</a> page.
           </p>
 
           <p>
