--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2>I build products that people love to use</h2>
 
           <p>
-            I'm a full stack software developer/product manager currently living in LA. The products that I build, collectively, have hundreds of thousands of users. I do mobile, web, and backend development.
+            I'm a full stack software developer/product manager currently living in Venice, CA. The products that I build, collectively, have hundreds of thousands of users. I do mobile, web, and backend development.
           </p>
 
           <p>
