--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2>I build products that people love to use</h2>
 
           <p>
-            I'm a full stack software developer/product manager currently living in Venice, CA. The products that I build, collectively, have hundreds of thousands of users. My specialties are mobile apps and minimum viable products.
+            I'm a full stack software developer/product manager currently living in Venice, CA. The products that I've built have hundreds of thousands of users. My specialties are mobile apps and minimum viable products. Let's build something amazing.
           </p>
 
           <p>
