update link to evolve on landing page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
           <ul class="apps">
             <li>
-              <a href="https://evolvehealth.io" rel="external nofollow" title="Evolve" target="_blank">
+              <a href="https://itunes.apple.com/us/app/evolve-health-made-simple/id1208407960?mt=8" rel="external nofollow" title="Evolve" target="_blank">
                 <img src="./img/app/evolve.png" alt="Evolve">
                 <span>Evolve</span>
               </a>
