update email address to danstepanov.com

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </p>
 
           <p>
-            Interested in chatting? <a href="mailto:danhstepanov@gmail.com">Hit me up</a>.
+            Interested in chatting? <a href="mailto:dan@danstepanov.com">Hit me up</a>.
           </p>
 
         <h2>What am I up to?</h2>
@@ -83,7 +83,7 @@
         </div>
 
         <div class="footer">
-          <a class="email" href="mailto:danhstepanov@gmail.com"></a>
+          <a class="email" href="mailto:dan@danstepanov.com"></a>
           <a class="github" href="http://github.com/danstepanov" target="_blank"></a>
           <a class="twitter" href="http://twitter.com/danstepanov" target="_blank"></a>
         </div>
