--- a/work/index.html
+++ b/work/index.html
@@ -203,7 +203,7 @@
       </div>
 
       <div class="footer">
-        <a class="email" href="mailto:danhstepanov@gmail.com"></a>
+        <a class="email" href="mailto:dan@danstepanov.com"></a>
         <a class="github" href="http://github.com/danstepanov" target="_blank"></a>
         <a class="twitter" href="http://twitter.com/danstepanov" target="_blank"></a>
       </div>
