update slice website link to use https

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               </a>
             </li>
             <li>
-              <a href="http://slice.capital/" rel="external nofollow" title="Slice Capital" target="_blank">
+              <a href="https://slice.capital/" rel="external nofollow" title="Slice Capital" target="_blank">
                 <img src="./img/app/slice.png" alt="Slice Capital">
                 <span>Slice Capital</span>
               </a>
