--- a/work/index.html
+++ b/work/index.html
@@ -148,7 +148,7 @@
         <h3>Web Apps</h3>
         <ul class="apps">
           <li>
-            <a href="http://slice.capital/" rel="external nofollow" title="Slice Capital" target="_blank">
+            <a href="https://slice.capital/" rel="external nofollow" title="Slice Capital" target="_blank">
               <img src="../img/app/slice.png" alt="Slice Capital">
               <span>Slice Capital</span>
             </a>
