update stack details

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </p>
 
           <p>
-            I mostly use React, React-Native, Redux, and GraphQL implementations to build amazing products. I love to travel so I'm looking forward to traveling a bit more over the next year with trips to South America and Australia.
+            I mostly use React, React-Native, Redux, Apollo, GraphQL, and AWS to build amazing products. I love to travel so I'm looking forward to traveling a bit more over the next year with trips to South America and Australia.
           </p>
 
           <h3>Latest Apps</h3>
