--- a/work/index.html
+++ b/work/index.html
@@ -58,7 +58,7 @@
             </a>
           </li>
           <li>
-            <a href="https://commaful.com/" rel="external nofollow" title="Commaful" target="_blank">
+            <a href="https://itunes.apple.com/us/app/commaful-read-short-stories/id1244982783?mt=8" rel="external nofollow" title="Commaful" target="_blank">
               <img src="../img/app/commaful.png" alt="Commaful">
               <span>Commaful</span>
             </a>
@@ -120,7 +120,7 @@
             </a>
           </li>
           <li>
-            <a href="https://commaful.com/" rel="external nofollow" title="Commaful" target="_blank">
+            <a href="https://itunes.apple.com/us/app/commaful-read-short-stories/id1244982783?mt=8" rel="external nofollow" title="Commaful" target="_blank">
               <img src="../img/app/commaful.png" alt="Commaful">
               <span>Commaful</span>
             </a>
