--- a/meet/index.html
+++ b/meet/index.html
@@ -3,7 +3,7 @@
       <script type="text/javascript">
       function load()
       {
-      window.location.href = "https://calendly.com/danslicecapital";
+      window.location.href = "https://cal.polymail.io/danhstepanov/meet";
 
       }
       </script>
