update copy, add meta tags for opengraph, add linkedin at bottom of page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Dan Stepanov</title>
     <link href="./css/main.css" rel="stylesheet">
     <link id="favicon" rel="icon" type="image/png" sizes="64x64" href="./favicon.png">
+    <meta property="og:image" content="/img/simple.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="danstepanov.com" />
+    <meta property="og:title" content="Dan Stepanov" />
+    <meta property="og:description" content="My crime is curiosity." />
   </head>
   <body>
     <script type="text/javascript">
@@ -35,7 +40,11 @@
         <h2>I build products that people love to use</h2>
 
           <p>
-            I'm a full stack software developer/product manager currently living in Venice, CA. The products that I've built have hundreds of thousands of users. My specialties are mobile apps and minimum viable products. Let's build something amazing.
+            I'm a detail-oriented hummus enthusiast with a passion for product development. Over the last 10 years, I've gone from chemical engineer to software engineer to technical product manager and I'm currently spending my time alternating between New York and Los Angeles. To date, the products that I've built have hundreds of thousands of users and operate in various industries including education, politics, professional sports, and finance.
+          </p>
+
+          <p>
+            
           </p>
 
           <p>
@@ -45,16 +54,26 @@
         <h2>What am I up to?</h2>
 
           <p>
-            I'm currently building <a href="https://slice.capital" target="_blank">Slice Capital</a>. I also work on <a href="http://hacker.fund/" target="_blank">Hacker Fund</a> where I help high school students learn to code. For more things that I've built, check out my <a href="/work">Work</a> page.
+            I'm currently advising PlayCall on their <a href="https://fantasylive.app/" target="_blank">Fantasy Live</a> experience. I have a passion for education and ensuring the civil liberties of people all over the world. Subsequently, I spend my free time advising and volunteering with <a href="http://hacker.fund/" target="_blank">Hacker Fund</a> where I help disadvantaged high school students learn to code. For more things that I've worked on, check out my <a href="/work">Work</a> page.
           </p>
 
           <p>
-            I mostly use React, React-Native, Redux, Apollo, GraphQL, and AWS to build amazing products. I love to travel so I'm looking forward to traveling a bit more over the next year with trips to South America and Australia.
+            I typically use React, React-Native, Redux, Apollo, GraphQL, and AWS to build products and Zenhub to manage the engineering process. I've been spending more time on my webscraping skills lately via Selenium and Python and will likely post some relevant projects shortly.
+          </p>
+
+          <p>
+            A lot of my free time is also spent reading. Right now, I'm reading "Mastering the Market Cycle" by Howard Marks, "Ghost in the Wires" by Kevin Mitnick, and I just wrapped up "I Will Teach You to Be Rich" by Ramit Sethi. Let me know if you have any recommendations, especially on the topic of finance.
           </p>
 
           <h3>Latest Apps</h3>
 
           <ul class="apps">
+            <li>
+              <a href="https://testflight.apple.com/join/iFTr10oN" rel="external nofollow" title="Fantasy Live" target="_blank">
+                <img src="./img/app/fantasylive.png" alt="Fantasy Live">
+                <span>Fantasy Live</span>
+              </a>
+            </li>
             <li>
               <a href="https://itunes.apple.com/us/app/evolve-health-made-simple/id1208407960?mt=8" rel="external nofollow" title="Evolve" target="_blank">
                 <img src="./img/app/evolve.png" alt="Evolve">
@@ -67,12 +86,7 @@
                 <span>Slice Capital</span>
               </a>
             </li>
-            <li>
-              <a href="https://itunes.apple.com/us/app/chem101-chemistry-classroom/id1128486439?mt=8" rel="external nofollow" title="101" target="_blank">
-                <img src="./img/app/101.png" alt="101">
-                <span>101</span>
-              </a>
-            </li>
+            
             <li>
               <a href="/work" title="Show more apps">
                 <img src="./img/app/Unknown.svg" alt="More apps">
@@ -84,8 +98,9 @@
 
         <div class="footer">
           <a class="email" href="mailto:dan@danstepanov.com"></a>
-          <a class="github" href="http://github.com/danstepanov" target="_blank"></a>
-          <a class="twitter" href="http://twitter.com/danstepanov" target="_blank"></a>
+          <a class="github" href="https://github.com/danstepanov" target="_blank"></a>
+          <a class="twitter" href="https://twitter.com/danstepanov" target="_blank"></a>
+          <a class="linkedin" href="https://linkedin.com/in/danstepanov" target="_blank"></a>
         </div>
       </div>
   </body>
