--- a/about/index.html
+++ b/about/index.html
@@ -1,20 +1,67 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script type="text/javascript">(function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable time_event track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
-      for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"file:"===e.location.protocol&&"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f)}})(document,window.mixpanel||[]);
-      mixpanel.init("7491f0cbde3cb9598d8dc137df339243");
+    <script type="text/javascript">
+      (function(e, b) {
+        if (!b.__SV) {
+          var a, f, i, g;
+          window.mixpanel = b;
+          b._i = [];
+          b.init = function(a, e, d) {
+            function f(b, h) {
+              var a = h.split('.');
+              2 == a.length && ((b = b[a[0]]), (h = a[1]));
+              b[h] = function() {
+                b.push([h].concat(Array.prototype.slice.call(arguments, 0)));
+              };
+            }
+            var c = b;
+            'undefined' !== typeof d ? (c = b[d] = []) : (d = 'mixpanel');
+            c.people = c.people || [];
+            c.toString = function(b) {
+              var a = 'mixpanel';
+              'mixpanel' !== d && (a += '.' + d);
+              b || (a += ' (stub)');
+              return a;
+            };
+            c.people.toString = function() {
+              return c.toString(1) + '.people (stub)';
+            };
+            i = 'disable time_event track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user'.split(
+              ' '
+            );
+            for (g = 0; g < i.length; g++) f(c, i[g]);
+            b._i.push([a, e, d]);
+          };
+          b.__SV = 1.2;
+          a = e.createElement('script');
+          a.type = 'text/javascript';
+          a.async = !0;
+          a.src =
+            'undefined' !== typeof MIXPANEL_CUSTOM_LIB_URL
+              ? MIXPANEL_CUSTOM_LIB_URL
+              : 'file:' === e.location.protocol &&
+                '//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js'.match(/^\/\//)
+              ? 'https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js'
+              : '//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js';
+          f = e.getElementsByTagName('script')[0];
+          f.parentNode.insertBefore(a, f);
+        }
+      })(document, window.mixpanel || []);
+      mixpanel.init('7491f0cbde3cb9598d8dc137df339243');
     </script>
     <title>Dan Stepanov</title>
-    <link href="/css/main.css" rel="stylesheet">
-    <link id="favicon" rel="icon" type="image/png" sizes="57x52" href="/favicon.png">
+    <link href="/css/main.css" rel="stylesheet" />
+    <link id="favicon" rel="icon" type="image/png" sizes="57x52" href="/favicon.png" />
+    <meta property="og:image" content="/img/simple.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="danstepanov.com" />
+    <meta property="og:title" content="Dan Stepanov" />
+    <meta property="og:description" content="My crime is curiosity." />
   </head>
   <body>
     <script type="text/javascript">
-      mixpanel.track(
-        "Open Page",
-        {"page": "About"}
-      );
+      mixpanel.track('Open Page', { page: 'About' });
     </script>
     <div class="site">
       <div class="header">
@@ -24,45 +71,58 @@
         <a href="https://medium.com/@danstepanov" target="_blank">Blog</a>
       </div>
       <script type="text/javascript">
-        mixpanel.track_links("#nav a", "click nav link", {
-          "referrer": document.referrer
+        mixpanel.track_links('#nav a', 'click nav link', {
+          referrer: document.referrer
         });
       </script>
       <div class="home">
-    		<h2>About Me</h2>
+        <h2>About Me</h2>
 
-  		  <p>
-          I am a <a href="https://github.com/danstepanov" rel="external nofollow" target="_blank">full stack Javascript developer</a>, <a href="http://devpost.com/danstepanov?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav" target="_blank">hackathon junky</a>, classic car enthusiast, and hummus lover. I currenlty live in LA but I tend to travel a lot.
+        <p>
+          I'm a technical product manager coming from a background of both software and chemical
+          engineering. When I'm not working, I'm either at
+          <a
+            href="http://devpost.com/danstepanov?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav"
+            target="_blank"
+            >hackathons</a
+          >, reading something informative, trying to decide which motorcycle I'm getting (probably
+          a Triumph Bonneville), or combatting this damn existential dread. I currenlty live in LA
+          but I tend to spend a lot of time in NY.
         </p>
 
         <p>
-          I graduated with a degree in Chemical Engineering from Penn State in May of 2015 but I don't really use that knowledge much outside of HQ Trivia.
+          I graduated with a degree in Chemical Engineering from Penn State in May of 2015 but I
+          discovered my passion for coding and product development at the University of Michigan in
+          Ann Arbor. In one weekend in September of 2014, my entire worldview was shattered and I
+          decided to learn as much about coding as I possibly could. I even ended up writing code to
+          do my homework at Penn State while trying to spend more and more time with my hackathon
+          buddies in Michigan.
         </p>
 
         <p>
-          I'm currently reading Zero to One by Peter Thiel and I'm always looking for book recommendations. I enjoy playing chess and other mind games such as Avalon.
+          I'm currently reading Ghost in the Wires by Kevin Mitnick and Mastering the Market Cycle
+          by Howard Marks. I highly recommend both! I enjoy a good game of chess and other cerebral
+          games like Avalon.
         </p>
 
-  		  <p>Ask me things on Twitter if you're curious.</p>
+        <p>Ask me things on Twitter if you're curious.</p>
 
-  		  <h2>Interests</h2>
+        <h2>Interests</h2>
 
         <p>
-          I love collaborative building, good food (especially hummus), debating, and learning.
+          I love discussing product-market fit and I love trying to find ways to use things outside
+          of their originally intended purpose. My crime is curiosity.
         </p>
 
-        <p>
-          In my free time, you can find me either reading Hacker News or building something that changes how people do things.
-        </p>
-
-  		  <p>Feel free to <a href="mailto:dan@slice.capital">send me an email</a>.</p>
+        <p>Feel free to <a href="mailto:dan@danstepanov.com">send me an email</a>.</p>
 
         <div class="footer">
-          <a class="email" href="mailto:dan@slice.capital?subject=%5BWEB%5D%20Contact"></a>
+          <a class="email" href="mailto:dan@danstepanov.com"></a>
           <a class="github" href="http://github.com/danstepanov" target="_blank"></a>
           <a class="twitter" href="http://twitter.com/danstepanov" target="_blank"></a>
+          <a class="linkedin" href="https://linkedin.com/in/danstepanov" target="_blank"></a>
         </div>
       </div>
-	  </div>
+    </div>
   </body>
 </html>
