--- a/meet/index.html
+++ b/meet/index.html
@@ -1,13 +1,15 @@
 <html>
-    <head>
-      <script type="text/javascript">
-      function load()
-      {
-      window.location.href = "https://cal.polymail.io/danhstepanov/meet";
-
+  <head>
+    <meta property="og:image" content="/img/simple.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="danstepanov.com" />
+    <meta property="og:title" content="Dan Stepanov" />
+    <meta property="og:description" content="My crime is curiosity." />
+    <script type="text/javascript">
+      function load() {
+        window.location.href = 'https://cal.polymail.io/danhstepanov/meet';
       }
-      </script>
-    </head>
-    <body onload="load()">
-    </body>
-  </html>
+    </script>
+  </head>
+  <body onload="load()"></body>
+</html>
