--- a/work/index.html
+++ b/work/index.html
@@ -80,20 +80,31 @@
         <p>
           Since 2013, I have worked on numerous apps and projects in many different verticals. Most
           recently, I built
-          <a href="https://testflight.apple.com/join/iFTr10oN" rel="external nofollow" target="_blank">Fantasy Live</a>
+          <a
+            href="https://testflight.apple.com/join/iFTr10oN"
+            rel="external nofollow"
+            target="_blank"
+            >Fantasy Live</a
+          >
           and
-          <a href="https://slice.capital" rel="external nofollow" target="_blank">Slice Capital</a>. I lead product development for both companies which included maintaining relationships with SportRadar, Stripe, Plaid, FINRA, and the SEC.
-          Additionally, I helped build
-          <a href="https://apps.apple.com/us/app/evolve-health-made-simple/id1208407960" rel="external nofollow" target="_blank">Evolve</a> and
+          <a href="https://slice.capital" rel="external nofollow" target="_blank">Slice Capital</a>.
+          I lead product development for both companies which included maintaining relationships
+          with SportRadar, Stripe, Plaid, FINRA, and the SEC. Additionally, I helped build
+          <a
+            href="https://apps.apple.com/us/app/evolve-health-made-simple/id1208407960"
+            rel="external nofollow"
+            target="_blank"
+            >Evolve</a
+          >
+          and
           <a
             href="https://itunes.apple.com/us/app/chem101-chemistry-classroom/id1128486439?mt=8"
             rel="external nofollow"
             target="_blank"
             >101</a
-          >.
-          Before all of these projects, due to my interests in education, I worked at
-          <a href="https://makeschool.com" rel="external nofollow" target="_blank">Make School</a> (YC W12).
-          Almost everything I build now uses
+          >. Before all of these projects, due to my interests in education, I worked at
+          <a href="https://makeschool.com" rel="external nofollow" target="_blank">Make School</a>
+          (YC W12). Almost everything I build now uses
           <a href="https://reactjs.org" rel="external nofollow" target="_blank">React</a>,
           <a href="https://facebook.github.io/react-native/" rel="external nofollow" target="_blank"
             >React-Native</a
@@ -240,7 +251,7 @@
         </ul>
 
         <h3>AR Apps</h3>
-        <ul class="apps"></ul>
+        <ul class="apps">
           <li>
             <a href="https://geenee.me/" rel="external nofollow" title="Geenee" target="_blank">
               <img src="../img/app/geenee.png" alt="Geenee" />
