update open graph title

--- a/connect/index.html
+++ b/connect/index.html
@@ -3,8 +3,7 @@
     <meta property="og:image" content="/img/simple.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="danstepanov.com" />
-    <meta property="og:title" content="Dan Stepanov" />
-    <meta property="og:description" content="My crime is curiosity." />
+    <meta property="og:title" content="Dan Stepanov | My crime is curiosity" />
     <script type="text/javascript">
       function load() {
         window.location.href = 'https://calendly.com/fullcalendar';
