--- a/work/index.html
+++ b/work/index.html
@@ -56,8 +56,7 @@
     <meta property="og:image" content="/img/simple.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="danstepanov.com" />
-    <meta property="og:title" content="Dan Stepanov" />
-    <meta property="og:description" content="My crime is curiosity." />
+    <meta property="og:title" content="Dan Stepanov | My crime is curiosity" />
   </head>
   <body>
     <script type="text/javascript">
