--- a/meet/index.html
+++ b/meet/index.html
@@ -3,7 +3,7 @@
     <meta property="og:image" content="/img/simple.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="danstepanov.com" />
-    <meta property="og:title" content="Dan Stepanov - My crime is curiosity" />
+    <meta property="og:title" content="Dan Stepanov" />
     <script type="text/javascript">
       function load() {
         window.location.href = 'https://cal.polymail.io/danhstepanov/meet';
