--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="danstepanov.com" />
     <meta property="og:title" content="Dan Stepanov" />
+    <meta property="og:description" content="My crime is curiosity." />
   </head>
   <body>
     <script type="text/javascript">
