--- a/meet/index.html
+++ b/meet/index.html
@@ -4,6 +4,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="danstepanov.com" />
     <meta property="og:title" content="Dan Stepanov" />
+    <meta property="og:description" content="My crime is curiosity." />
     <script type="text/javascript">
       function load() {
         window.location.href = 'https://cal.polymail.io/danhstepanov/meet';
