--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link href="./css/main.css" rel="stylesheet">
     <link id="favicon" rel="icon" type="image/png" sizes="64x64" href="./favicon.png">
     <meta property="og:image" content="/img/simple.png" />
+    <meta property="og:image" content="http://danstepanov.com/img/simple.png" />
+    <meta property="og:image:secure_url" content="https://danstepanov.com/img/simple.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="627" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="danstepanov.com" />
     <meta property="og:title" content="Dan Stepanov" />
