--- a/meet/index.html
+++ b/meet/index.html
@@ -1,6 +1,11 @@
 <html>
   <head>
     <meta property="og:image" content="/img/simple.png" />
+    <meta property="og:image" content="http://danstepanov.com/img/simple.png" />
+    <meta property="og:image:secure_url" content="https://danstepanov.com/img/simple.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="627" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="danstepanov.com" />
     <meta property="og:title" content="Dan Stepanov" />
