update mixpanel to track opening of meeting links

--- a/connect/index.html
+++ b/connect/index.html
@@ -11,6 +11,7 @@
     <meta property="og:title" content="Dan Stepanov" />
     <meta property="og:description" content="My crime is curiosity." />
     <script type="text/javascript">
+      mixpanel.track('Open Connect Link');
       function load() {
         window.location.href = 'https://calendly.com/fullcalendar';
       }
