--- a/meet/index.html
+++ b/meet/index.html
@@ -11,6 +11,7 @@
     <meta property="og:title" content="Dan Stepanov" />
     <meta property="og:description" content="My crime is curiosity." />
     <script type="text/javascript">
+      mixpanel.track('Open Meet Link');
       function load() {
         window.location.href = 'https://cal.polymail.io/danhstepanov/meet';
       }
