--- a/about/index.html
+++ b/about/index.html
@@ -98,10 +98,10 @@
         <p>
           I graduated with a degree in Chemical Engineering from Penn State in May of 2015 but I
           discovered my passion for coding and product development at the University of Michigan in
-          Ann Arbor. During one weekend in September of 2014, my entire worldview was shattered and
-          I decided to learn as much about coding as I possibly could. I even ended up writing code
-          to do my homework at Penn State while trying to spend more and more time with my hackathon
-          buddies in Michigan.
+          Ann Arbor. During one weekend in September of 2014, my entire worldview was shattered at
+          MHacks 2 and I decided to learn as much about coding as I possibly could. I even ended up
+          writing code to do my homework at Penn State while trying to spend more time with my
+          hackathon buddies in Michigan.
         </p>
 
         <p>
