--- a/work/index.html
+++ b/work/index.html
@@ -305,7 +305,7 @@
 
         <p>
           Anycdote was inspired by Humans of New York. The app allows users to pin personal stories
-          to geographic locations. Other users can then experience stories that close to them by
+          to geographic locations. Other users can then experience stories that are close to them by
           proximity. Anycdote is written completely in Swift and relies on a
           <a href="https://parse.com" target="_blank">Parse</a> backend.
         </p>
@@ -316,8 +316,9 @@
 
         <p>
           Reach is a secure &amp; discrete communication platform I made for reporters who work in
-          dangerous areas. I built Reach because I believe that every person is entitled to speak
-          out against their government. Reach is both a web app and a native Android app built using
+          dangerous areas. I built Reach because I believe that every person is entitled to voice
+          their opinion with regard to their government. Reach is both a web app and a native
+          Android app built using
           <a href="https://facebook.github.io/react/" target="_blank">React</a> and
           <a href="https://facebook.github.io/react-native/" target="_blank">React-Native</a>. It is
           currently under development but, even so, it employs a multitude of features such as
