add resume to navbar

--- a/work/index.html
+++ b/work/index.html
@@ -73,6 +73,7 @@
         <a href="/">Home</a>
         <a style="color:black">Work</a>
         <a href="/about">About</a>
+        <a href="/resume">Resume</a>
         <a href="https://medium.com/@danstepanov" target="_blank">Blog</a>
       </div>
       <script type="text/javascript">
