--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <a style="color:black">Home</a>
         <a href="/work">Work</a>
         <a href="/about">About</a>
+        <a href="/resume">Resume</a>
         <a href="https://medium.com/@danstepanov" target="_blank">Blog</a>
       </div>
       <script type="text/javascript">
